chore: update submodules

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
-<title>OpenSCD Transpower Distribution</title>
+<title>OpenSCD Core jarradraumati Distribution</title>
 <open-scd></open-scd>
 
 <link href="themes.css" rel="stylesheet" />
